tests/fail/stable/invalid_type_in_placeholder.stderr
error: invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type or index.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{.}"
            ^
 --> tests/fail/stable/invalid_type_in_placeholder.rs:2:27
  |
2 |     sscanf::sscanf!("hi", "{.}");
  |                           ^^^^^

error: invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type or index.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{.:/hi/}"
            ^
 --> tests/fail/stable/invalid_type_in_placeholder.rs:4:27
  |
4 |     sscanf::sscanf!("hi", "{.:/hi/}");
  |                           ^^^^^^^^^^

error: type index 99 out of range of 0 types:
       At "{99}"
            ^^
 --> tests/fail/stable/invalid_type_in_placeholder.rs:6:27
  |
6 |     sscanf::sscanf!("hi", "{99}");
  |                           ^^^^^^

error[E0412]: cannot find type `bob` in this scope
 --> tests/fail/stable/invalid_type_in_placeholder.rs:3:27
  |
3 |     sscanf::sscanf!("hi", "{bob}");
  |                           ^^^^^^^ not found in this scope

error[E0412]: cannot find type `bob` in this scope
 --> tests/fail/stable/invalid_type_in_placeholder.rs:5:27
  |
5 |     sscanf::sscanf!("hi", "{bob:/hi/}");
  |                           ^^^^^^^^^^^^ not found in this scope
